changed data in front page

--- a/index.html
+++ b/index.html
@@ -1184,7 +1184,7 @@
         <div class="hero-badge">
             <div class="hero-badge-inner">
                 <div class="hero-badge-text">
-                    A NATIONAL LEVEL TECHNICAL SYMPOSIUM FOR WOMEN
+                    A NATIONAL LEVEL TECHNICAL SYMPOSIUM FOR 
                 </div>
             </div>
         </div>
