added some previous year images

--- a/gallery.html
+++ b/gallery.html
@@ -136,6 +136,136 @@
                 </div>
             </div>
 
+            <!-- Item 6 -->
+            <div class="gallery-item rounded-2xl overflow-hidden border border-slate-800">
+                <div class="aspect-video relative">
+                    <img src="Gallery_images/img6.jpeg" alt="TechNova Event 6" class="w-full h-full object-cover">
+                    <div class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent flex items-end p-4">
+                        <div>
+                            <span class="text-cyan-400 text-sm font-semibold">Previous Years</span>
+                            <h3 class="text-white text-lg font-bold">Technical Workshops</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Item 7 -->
+            <div class="gallery-item rounded-2xl overflow-hidden border border-slate-800">
+                <div class="aspect-video relative">
+                    <img src="Gallery_images/img7.jpeg" alt="TechNova Event 7" class="w-full h-full object-cover">
+                    <div class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent flex items-end p-4">
+                        <div>
+                            <span class="text-cyan-400 text-sm font-semibold">Previous Years</span>
+                            <h3 class="text-white text-lg font-bold">Robotics Exhibition</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Item 8 -->
+            <div class="gallery-item rounded-2xl overflow-hidden border border-slate-800">
+                <div class="aspect-video relative">
+                    <img src="Gallery_images/img8.jpeg" alt="TechNova Event 8" class="w-full h-full object-cover">
+                    <div class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent flex items-end p-4">
+                        <div>
+                            <span class="text-cyan-400 text-sm font-semibold">Previous Years</span>
+                            <h3 class="text-white text-lg font-bold">Hackathon Sessions</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Item 9 -->
+            <div class="gallery-item rounded-2xl overflow-hidden border border-slate-800">
+                <div class="aspect-video relative">
+                    <img src="Gallery_images/img9.jpeg" alt="TechNova Event 9" class="w-full h-full object-cover">
+                    <div class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent flex items-end p-4">
+                        <div>
+                            <span class="text-cyan-400 text-sm font-semibold">Previous Years</span>
+                            <h3 class="text-white text-lg font-bold">Student Presentations</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Item 10 -->
+            <div class="gallery-item rounded-2xl overflow-hidden border border-slate-800">
+                <div class="aspect-video relative">
+                    <img src="Gallery_images/img10.jpeg" alt="TechNova Event 10" class="w-full h-full object-cover">
+                    <div class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent flex items-end p-4">
+                        <div>
+                            <span class="text-cyan-400 text-sm font-semibold">Previous Years</span>
+                            <h3 class="text-white text-lg font-bold">Panel Discussions</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Item 11 -->
+            <div class="gallery-item rounded-2xl overflow-hidden border border-slate-800">
+                <div class="aspect-video relative">
+                    <img src="Gallery_images/img11.jpeg" alt="TechNova Event 11" class="w-full h-full object-cover">
+                    <div class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent flex items-end p-4">
+                        <div>
+                            <span class="text-cyan-400 text-sm font-semibold">Previous Years</span>
+                            <h3 class="text-white text-lg font-bold">Networking Events</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Item 12 -->
+            <div class="gallery-item rounded-2xl overflow-hidden border border-slate-800">
+                <div class="aspect-video relative">
+                    <img src="Gallery_images/img12.jpeg" alt="TechNova Event 12" class="w-full h-full object-cover">
+                    <div class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent flex items-end p-4">
+                        <div>
+                            <span class="text-cyan-400 text-sm font-semibold">Previous Years</span>
+                            <h3 class="text-white text-lg font-bold">Opening Ceremony</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Item 13 -->
+            <div class="gallery-item rounded-2xl overflow-hidden border border-slate-800">
+                <div class="aspect-video relative">
+                    <img src="Gallery_images/img13.jpeg" alt="TechNova Event 13" class="w-full h-full object-cover">
+                    <div class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent flex items-end p-4">
+                        <div>
+                            <span class="text-cyan-400 text-sm font-semibold">Previous Years</span>
+                            <h3 class="text-white text-lg font-bold">Team Building Activities</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Item 14 -->
+            <div class="gallery-item rounded-2xl overflow-hidden border border-slate-800">
+                <div class="aspect-video relative">
+                    <img src="Gallery_images/img14.jpeg" alt="TechNova Event 14" class="w-full h-full object-cover">
+                    <div class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent flex items-end p-4">
+                        <div>
+                            <span class="text-cyan-400 text-sm font-semibold">Previous Years</span>
+                            <h3 class="text-white text-lg font-bold">Closing Celebrations</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Item 15 -->
+            <div class="gallery-item rounded-2xl overflow-hidden border border-slate-800">
+                <div class="aspect-video relative">
+                    <img src="Gallery_images/img15.jpeg" alt="TechNova Event 15" class="w-full h-full object-cover">
+                    <div class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent flex items-end p-4">
+                        <div>
+                            <span class="text-cyan-400 text-sm font-semibold">Previous Years</span>
+                            <h3 class="text-white text-lg font-bold">Special Memories</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </section>
 
